WidgetSet building in complex configurations (Support Project-all) #PL-1809